fix link contact linkedin

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -92,7 +92,7 @@ layout: default
 
         <h3 style="text-align: center;">Contact me:</h3>
         <div style="display: flex; justify-content: center;">
-                <a style="margin-left: 4px; margin-right: 4px;" href="hhttps://www.linkedin.com/in/hammamxalf/"><img
+                <a style="margin-left: 4px; margin-right: 4px;" href="https://www.linkedin.com/in/hammamxalf/"><img
                                 height="30"
                                 src="https://raw.githubusercontent.com/raivo-otp/issuer-icons/a2705551fb38d11fceb5955fe79a3cdce55fd04c/vectors/linkedin.com/linkedin.svg"></a>
                 <a style="margin-left: 4px; margin-right: 4px;" href="https://github.com/mamxalf"><img height="30"
