create new article - Refactor Conditional Statement (if else & switch case) & Performanya

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -15,7 +15,7 @@ layout: default
                         <h3 class="tags-item-label">Software Engineer - Qontak by Mekari</h3>
                         <a class="tags-post" href="#">
                                 <div>
-                                        <span class="tags-post-title">Note: </span>
+                                        <span class="tags-post-title">Still On Progress :)))</span>
                                         <div class="tags-post-line"></div>
                                 </div>
                                 <span class="tags-post-meta">
@@ -26,14 +26,35 @@ layout: default
                 <!-- End Marker -->
                 <!-- Marker -->
                 <div class="tags-item" id="">
-                        <h3 class="tags-item-label">Instructor - Amikom Center</h3>
+                        <h3 class="tags-item-label">Part-Time Program (PTP) Instructor - Hacktiv8</h3>
                         <a class="tags-post" href="#">
                                 <div>
-                                        <span class="tags-post-title">Note: </span>
+                                        <span class="tags-post-title">Still On Progress :)))</span>
                                         <div class="tags-post-line"></div>
                                 </div>
                                 <span class="tags-post-meta">
-                                        <time>Nov 2020 - Dec 2021 (Freelance)</time>
+                                        <time>Mar 2022 - Present (Part Time)</time>
+                                </span>
+                        </a>
+                </div>
+                <!-- End Marker -->
+                <!-- Marker -->
+                <div class="tags-item" id="">
+                        <h3 class="tags-item-label">Instructor - Amikom Center</h3>
+                        <a class="tags-post" href="#">
+                                <div>
+                                        <span class="tags-post-title">Teach and Lead Intern Web Developer to Build Product
+                                                <hr>
+                                                Product: <br>
+                                                <ul>
+                                                        <li>Learning Management System</li>
+                                                        <li>Attendance System</li>
+                                                </ul>
+                                        </span>
+                                        <div class="tags-post-line"></div>
+                                </div>
+                                <span class="tags-post-meta">
+                                        <time>Nov 2020 - Dec 2021 (Part Time)</time>
                                 </span>
                         </a>
                 </div>
@@ -43,7 +64,12 @@ layout: default
                         <h3 class="tags-item-label">Backend Engineer - Tamtech International</h3>
                         <a class="tags-post" href="#">
                                 <div>
-                                        <span class="tags-post-title">Note: </span>
+                                        <span class="tags-post-title">Create Billing System for Neurovi (Hospitality System) 
+                                                <br>and Migrate Neurovi from Hospital management <br> to Clinic management
+                                                <hr>
+                                                Stack Technology: NodeJs - ExpressJs - MongoDB
+
+                                        </span>
                                         <div class="tags-post-line"></div>
                                 </div>
                                 <span class="tags-post-meta">
